tried to fix the ui on ios

--- a/staticdir/css/post.css
+++ b/staticdir/css/post.css
@@ -127,6 +127,7 @@ input[type=submit] {
     color: var(--textColor);
     font-size: smaller;
     border-radius: .2rem;
+    -webkit-appearance: button;
 }
 
 input[type=submit]:hover {
