--- a/staticdir/css/register.css
+++ b/staticdir/css/register.css
@@ -104,6 +104,7 @@ form input[type = submit] {
     border-radius: .2rem;
     width: 40%;
     font-weight: 800;
+    -webkit-appearance: button;
 }
 
 form input[type = submit]:active {
